# Alexa_Voice_Assistant

./: .gitignore  Makefile  TASK_3_SUMMARY.md  generate_protos.py  main.py  pyproject.toml  setup.sh
config/: Modelfile  config.ini  config.txt
docs/: sys_spec.md
scripts/: generate_protos.py
services/: __init__.py  base.py  config.py  config_loader.py  kwd_service.py  llm_service.py  loader_service.py  logger_service.py  mic_service.py  registry.py  rms_service.py  shared.py  stt_service.py  tts_service.py  utils.py
services/kwd/: __init__.py  service.py
services/llm/: __init__.py  service.py
services/loader/: __init__.py  __main__.py  service.py
services/logger/: __init__.py  service.py
services/proto/: __init__.py  common.proto  common_pb2.py  common_pb2.pyi  kwd.proto  kwd_pb2.py  kwd_pb2.pyi  kwd_pb2_grpc.py  llm.proto  llm_pb2.py  llm_pb2.pyi  llm_pb2_grpc.py  loader.proto  loader_pb2.py  loader_pb2.pyi  loader_pb2_grpc.py  logger.proto  logger_pb2.py  logger_pb2.pyi  logger_pb2_grpc.py  stt.proto  stt_pb2.py  stt_pb2.pyi  stt_pb2_grpc.py  tts.proto  tts_pb2.py  tts_pb2.pyi  tts_pb2_grpc.py
services/stt/: __init__.py  service.py
services/tts/: __init__.py
tests/: __init__.py  test_config.py  test_kwd.py  test_llm.py  test_logger.py  test_proto.py  test_registry.py  test_stt.py
