[project]
name = "alexa-fast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "faster-whisper==1.2.0",
    "httpx==0.28.1",
    "kokoro-onnx==0.3.9",
    "numpy==2.2.6",
    "onnxruntime-gpu==1.22.0",
    "openwakeword==0.4.0",
    "orjson==3.11.2",
    "psutil==7.0.0",
    "pydantic==2.11.7",
    "pytest>=8.4.1",
    "requests==2.32.3",
    "sounddevice==0.5.2",
    "soundfile==0.13.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "uvicorn==0.34.0",
    "websockets==15.0.1",
]
